--- a/src/themelib_sap_fiori_3/src/sap/ui/unified/themes/sap_fiori_3_hcb/FileUploader.less
+++ b/src/themelib_sap_fiori_3/src/sap/ui/unified/themes/sap_fiori_3_hcb/FileUploader.less
@@ -8,6 +8,26 @@
 	height: 2.75rem;
 }
 
+.sapUiFup.sapMInputBase.sapUiFupButtonOnly .sapMInputBaseContentWrapper {
+	height: var(--sapElement_Height);
+	border-radius: var(--sapButton_BorderCornerRadius);
+}
+
+.sapMFocus.sapMInputBase.sapUiFupButtonOnly .sapMInputBaseContentWrapper:not(.sapMInputBaseDisabledWrapper) {
+	&::before {
+		border: 0.125rem dotted var(--sapContent_FocusColor);
+		border-radius: 0.25rem;
+	}
+}
+
+.sapUiFup.sapMBarChild.sapMInputBase.sapUiFupButtonOnly > .sapMInputBaseContentWrapper {
+	margin: 0;
+	height: 100%;
+	display: inline-flex;
+	align-items: center;
+	border-radius: var(--sapButton_BorderCornerRadius);
+}
+
 .sapUiFup {
 	&.sapUiFupButtonOnly.sapMInputBase:not(.sapMFocus) .sapMInputBaseContentWrapper:not(.sapMInputBaseReadonlyWrapper):not(.sapMInputBaseContentWrapperState) {
 		&:not(.sapMInputBaseDisabledWrapper):hover {
@@ -49,7 +69,9 @@
 	.sapUiFup.sapMBarChild {
 		height: 2rem;
 	}
-
+	.sapUiFup.sapMInputBase.sapUiFupButtonOnly > .sapMInputBaseContentWrapper {
+		height: var(--sapElement_Compact_Height);
+	}
 	.sapUiFup {
 		.sapMInputBaseContentWrapper {
 			height: var(--sapElement_Compact_Height);
